# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[profile.bench]
debug = true

[workspace]
default-members = ["core"]
members = [
  "core",

  "bindings/c",
  "bindings/nodejs",
  "bindings/object_store",
  "bindings/python",
  "bindings/ruby",
  "bindings/java",

  "bin/oli",
  "bin/oay",
]

[workspace.package]
authors = ["OpenDAL Contributors <dev@opendal.apache.org>"]
edition = "2021"
homepage = "https://opendal.apache.org/"
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-opendal"
rust-version = "1.65"
version = "0.34.0"

[workspace.dependencies]
opendal = { version = "0.34", path = "core" }
