[project]
name = "codegen"
version = "0.1.0"
description = "Generate source code for Apache OpenDAL."
authors = [
    {name = "Apache OpenDAL", email = "dev@opendal.apache.org"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.3.3",
]
