[project]
name = "codegen"
version = "0.1.0"
description = "Generate source code for Apache OpenDAL."
authors = [
    {name = "Apache OpenDAL", email = "dev@opendal.apache.org"},
]
dependencies = [
    "pyhumps>=3.8.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/codegen"]

[tool.pdm.scripts]
check = { composite = ["ruff check", "mypy src bin"] }
genconfig = "bin/genconfig.py"

[tool.pdm.dev-dependencies]
check = [
    "ruff>=0.3.3",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 120
lint.select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
src = ["src"]
