# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "codegen"
version = "0.1.0"
description = "Generate source code for Apache OpenDAL."
authors = [
    {name = "Apache OpenDAL", email = "dev@opendal.apache.org"},
]
dependencies = [
    "pyhumps>=3.8.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm]
distribution = true

[tool.pdm.scripts]
check = { composite = ["ruff check", "pyright"] }
genconfig = "bin/genconfig.py"

[tool.pdm.dev-dependencies]
check = [
    "ruff>=0.3.3",
    "pyright>=1.1.354",
]
bin = [
    "Jinja2>=3.1.3",
]

[tool.ruff]
line-length = 120
lint.select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
src = ["src"]

[tool.pyright]
strict = ["src", "bin"]
