# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
default-members = [".", "core"]
members = [
  ".",
  "core",
  "examples/*",
  "fuzz",
  "edge/*",
  "benches/vs_*",
  "services/*",
  "layers/*",
]

[workspace.package]
authors = ["Apache OpenDAL <dev@opendal.apache.org>"]
categories = ["filesystem"]
description = "Apache OpenDAL™: One Layer, All Storage."
edition = "2024"
homepage = "https://opendal.apache.org/"
license = "Apache-2.0"
repository = "https://github.com/apache/opendal"
rust-version = "1.85"
version = "0.55.0"

[workspace.dependencies]
base64 = "0.22"
bytes = "1.10"
ctor = "0.6"
futures = { version = "0.3", default-features = false }
http = "1.1"
log = "0.4"
quick-xml = { version = "0.38", default-features = false }
rand = "0.8"
reqsign = { version = "0.16.5", default-features = false }
serde = { version = "1", default-features = false }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.48", default-features = false }
uuid = { version = "1", default-features = false }

[package]
exclude = ["/tests/"]
keywords = ["storage", "fs", "s3", "azblob", "gcs"]
name = "opendal"

authors = { workspace = true }
categories = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints.clippy]
unused_async = "warn"

[package.metadata.docs.rs]
all-features = true

[features]
blocking = ["opendal-core/blocking"]
default = [
  "reqwest-rustls-tls",
  "executors-tokio",
  "services-memory",
]
executors-tokio = ["opendal-core/executors-tokio"]
internal-path-cache = ["opendal-core/internal-path-cache"]
internal-tokio-rt = ["opendal-core/internal-tokio-rt"]
layers-async-backtrace = ["dep:opendal-layer-async-backtrace"]
layers-await-tree = ["dep:opendal-layer-await-tree"]
layers-capability-check = ["dep:opendal-layer-capability-check"]
layers-chaos = ["opendal-core/layers-chaos"]
layers-dtrace = ["opendal-core/layers-dtrace"]
layers-fastmetrics = ["dep:opendal-layer-fastmetrics"]
layers-fastrace = ["dep:opendal-layer-fastrace"]
layers-metrics = ["dep:opendal-layer-metrics"]
layers-mime-guess = ["dep:opendal-layer-mime-guess"]
layers-otel-metrics = ["dep:opendal-layer-otelmetrics"]
layers-otel-trace = ["dep:opendal-layer-oteltrace"]
layers-prometheus = ["dep:opendal-layer-prometheus"]
layers-prometheus-client = ["dep:opendal-layer-prometheus-client"]
layers-tail-cut = ["dep:opendal-layer-tail-cut"]
layers-throttle = ["opendal-core/layers-throttle"]
layers-tracing = ["dep:opendal-layer-tracing"]
reqwest-rustls-tls = ["opendal-core/reqwest-rustls-tls"]
services-aliyun-drive = ["dep:opendal-service-aliyun-drive"]
services-alluxio = ["opendal-core/services-alluxio"]
services-azblob = ["dep:opendal-service-azblob"]
services-azdls = ["dep:opendal-service-azdls"]
services-azfile = ["dep:opendal-service-azfile"]
services-b2 = ["opendal-core/services-b2"]
services-cacache = ["opendal-core/services-cacache"]
services-cloudflare-kv = ["opendal-core/services-cloudflare-kv"]
services-compfs = ["opendal-core/services-compfs"]
services-cos = ["opendal-core/services-cos"]
services-d1 = ["opendal-core/services-d1"]
services-dashmap = ["opendal-core/services-dashmap"]
services-dbfs = ["opendal-core/services-dbfs"]
services-dropbox = ["opendal-core/services-dropbox"]
services-etcd = ["opendal-core/services-etcd"]
services-foundationdb = ["opendal-core/services-foundationdb"]
services-fs = ["opendal-core/services-fs"]
services-ftp = ["opendal-core/services-ftp"]
services-gcs = ["opendal-core/services-gcs"]
services-gdrive = ["opendal-core/services-gdrive"]
services-ghac = ["dep:opendal-service-ghac"]
services-github = ["opendal-core/services-github"]
services-gridfs = ["opendal-core/services-gridfs"]
services-hdfs = ["opendal-core/services-hdfs"]
services-hdfs-native = ["dep:opendal-service-hdfs-native"]
services-http = ["opendal-core/services-http"]
services-huggingface = ["opendal-core/services-huggingface"]
services-ipfs = ["opendal-core/services-ipfs"]
services-ipmfs = ["opendal-core/services-ipmfs"]
services-koofr = ["opendal-core/services-koofr"]
services-lakefs = ["opendal-core/services-lakefs"]
services-memcached = ["opendal-core/services-memcached"]
services-memory = ["opendal-core/services-memory"]
services-mini-moka = ["opendal-core/services-mini-moka"]
services-moka = ["dep:opendal-service-moka"]
services-mongodb = ["opendal-core/services-mongodb"]
services-monoiofs = ["opendal-core/services-monoiofs"]
services-mysql = ["dep:opendal-service-mysql"]
services-obs = ["dep:opendal-service-obs"]
services-onedrive = ["opendal-core/services-onedrive"]
services-opfs = ["opendal-core/services-opfs"]
services-oss = ["opendal-core/services-oss"]
services-pcloud = ["opendal-core/services-pcloud"]
services-persy = ["opendal-core/services-persy"]
services-postgresql = ["dep:opendal-service-postgresql"]
services-redb = ["opendal-core/services-redb"]
services-redis = ["opendal-core/services-redis"]
services-redis-native-tls = ["opendal-core/services-redis-native-tls"]
services-rocksdb = ["opendal-core/services-rocksdb"]
services-s3 = ["dep:opendal-service-s3"]
services-seafile = ["opendal-core/services-seafile"]
services-sftp = ["opendal-core/services-sftp"]
services-sled = ["opendal-core/services-sled"]
services-sqlite = ["opendal-core/services-sqlite"]
services-surrealdb = ["opendal-core/services-surrealdb"]
services-swift = ["opendal-core/services-swift"]
services-tikv = ["opendal-core/services-tikv"]
services-upyun = ["opendal-core/services-upyun"]
services-vercel-artifacts = ["opendal-core/services-vercel-artifacts"]
services-vercel-blob = ["dep:opendal-service-vercel-blob"]
services-webdav = ["opendal-core/services-webdav"]
services-webhdfs = ["opendal-core/services-webhdfs"]
services-yandex-disk = ["opendal-core/services-yandex-disk"]
tests = ["opendal-core/tests"]

[lib]
bench = false

[[bench]]
harness = false
name = "ops"
required-features = ["tests"]

[[bench]]
harness = false
name = "types"

[[test]]
harness = false
name = "behavior"
path = "tests/behavior/main.rs"
required-features = ["tests"]

[dependencies]
opendal-core = { path = "core", version = "0.55.0", default-features = false }
opendal-layer-async-backtrace = { path = "layers/async-backtrace", version = "0.55.0", optional = true, default-features = false }
opendal-layer-await-tree = { path = "layers/await-tree", version = "0.55.0", optional = true, default-features = false }
opendal-layer-capability-check = { path = "layers/capability-check", version = "0.55.0", optional = true, default-features = false }
opendal-layer-fastmetrics = { path = "layers/fastmetrics", version = "0.55.0", optional = true, default-features = false }
opendal-layer-fastrace = { path = "layers/fastrace", version = "0.55.0", optional = true, default-features = false }
opendal-layer-metrics = { path = "layers/metrics", version = "0.55.0", optional = true, default-features = false }
opendal-layer-mime-guess = { path = "layers/mime-guess", version = "0.55.0", optional = true, default-features = false }
opendal-layer-observe-metrics-common = { path = "layers/observe-metrics-common", version = "0.55.0", optional = true, default-features = false }
opendal-layer-otelmetrics = { path = "layers/otelmetrics", version = "0.55.0", optional = true, default-features = false }
opendal-layer-oteltrace = { path = "layers/oteltrace", version = "0.55.0", optional = true, default-features = false }
opendal-layer-prometheus = { path = "layers/prometheus", version = "0.55.0", optional = true, default-features = false }
opendal-layer-prometheus-client = { path = "layers/prometheus-client", version = "0.55.0", optional = true, default-features = false }
opendal-layer-tail-cut = { path = "layers/tail-cut", version = "0.55.0", optional = true, default-features = false }
opendal-layer-tracing = { path = "layers/tracing", version = "0.55.0", optional = true, default-features = false }
opendal-service-aliyun-drive = { path = "services/aliyun-drive", version = "0.55.0", optional = true, default-features = false }
opendal-service-azblob = { path = "services/azblob", version = "0.55.0", optional = true, default-features = false }
opendal-service-azdls = { path = "services/azdls", version = "0.55.0", optional = true, default-features = false }
opendal-service-azfile = { path = "services/azfile", version = "0.55.0", optional = true, default-features = false }
opendal-service-ghac = { path = "services/ghac", version = "0.55.0", optional = true, default-features = false }
opendal-service-hdfs-native = { path = "services/hdfs-native", version = "0.55.0", optional = true, default-features = false }
opendal-service-moka = { path = "services/moka", version = "0.55.0", optional = true, default-features = false }
opendal-service-mysql = { path = "services/mysql", version = "0.55.0", optional = true, default-features = false }
opendal-service-obs = { path = "services/obs", version = "0.55.0", optional = true, default-features = false }
opendal-service-postgresql = { path = "services/postgresql", version = "0.55.0", optional = true, default-features = false }
opendal-service-s3 = { path = "services/s3", version = "0.55.0", optional = true, default-features = false }
opendal-service-vercel-blob = { path = "services/vercel-blob", version = "0.55.0", optional = true, default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.100", features = ["std"] }
bytes = { workspace = true }
criterion = { version = "0.7", features = ["async", "async_tokio"] }
divan = { version = "0.1" }
dotenvy = "0.15"
fastrace = { version = "0.7", features = ["enable"] }
fastrace-jaeger = "0.7"
futures = { workspace = true, default-features = true }
http = { workspace = true }
libtest-mimic = "0.8"
log = { workspace = true }
opentelemetry = { version = "0.31.0", default-features = false, features = [
  "trace",
] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
pretty_assertions = "1"
rand = { workspace = true }
reqwest = { version = "0.12.24" }
sha2 = { workspace = true }
size = "0.5"
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
] }
uuid = { workspace = true, features = ["serde", "v4"] }
